Fix mobile scrolling flicker

--- a/src/App.css
+++ b/src/App.css
@@ -761,5 +761,9 @@ body {
     top: 0;
     width: 100%;
   }
+
+  .landing-main-wrapper {
+    height: calc(120vw + 180vh);
+  }
 }
 
